tests/parsing/smtlib/v2.7/errors/122_sort_app_empty_args_1.smt2
(set-logic ALL)
(declare-const foo (array _))
